added timeline to about me

--- a/resume.html
+++ b/resume.html
@@ -211,7 +211,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">HTML</div>
+            <div class="skills-item">GitHub</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -219,7 +219,23 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">CSS</div>  
+            <div class="skills-item">Node.js</div>  
+            <div class="skills-item-right">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star white"></span>
+                <span class="fa fa-star white"></span>
+                <span class="fa fa-star white"></span>
+            </div>
+            <div class="skills-item">Express.js</div>
+            <div class="skills-item-right">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star white"></span>
+                <span class="fa fa-star white"></span>
+                <span class="fa fa-star white"></span>
+            </div>  
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -227,7 +243,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">JavaScript</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -235,7 +251,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">Python</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -243,7 +259,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">JavaScript</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -251,7 +267,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">Python</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -259,7 +275,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">JavaScript</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -267,7 +283,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">Python</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -275,7 +291,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">JavaScript</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -283,7 +299,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">Python</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -291,7 +307,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">JavaScript</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -299,23 +315,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">Python</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>
-            <div class="skills-item">JavaScript</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>  
-            <div class="skills-item">Python</div>
+            <div class="skills-item">?</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -325,6 +325,15 @@
             </div>
         </div>
     </div>
+</div>
+
+<!-- Certificates -->
+<div class = "certificates-container">
+    <div class = "certificates-container-title">
+        <p id = "certificates-title">Certificates</p>
+        <hr>
+    </div>
+
 </div>
 
 <!-- Foooter -->
