--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
 <link rel="stylesheet" href="./styles/index.css">
 <body>
 
-  <!-- background image -->
-<div class="backgroundImage">
-
-</div>
-
-<div class = "center-box-text">
-  <p>Hello, my name is <span class = "name-highlight">Jonathan Dominguez.</span></p>
-  <p>I'm a full-stack web developer and junior software engineer.</p>
-  <button onclick = "moveDown()"class = "view-me-button">View about me</button>
-</div>
-
-  <!-- Nav bad  -->
+  <!-- Navigation bar   -->
 <header class = "head">
     <div class="container">
       <nav>
@@ -30,6 +19,18 @@
       </nav>
     </div>
 </header>
+
+  <!-- background image -->
+<div class="backgroundImage">
+
+</div>
+
+<!-- Center box with text of name -->
+<div class = "center-box-text">
+  <p>Hello, my name is <span class = "name-highlight">Jonathan Dominguez.</span></p>
+  <p>I'm a full-stack web developer and junior software engineer.</p>
+  <button onclick = "moveDown()"class = "view-me-button">View about me</button>
+</div>
 
 <!-- About me -->
 <div class = "about-me-section">
@@ -50,19 +51,65 @@
       <!-- </div> -->
     </div>
   </div>
+</div>
 
-  <div class="about-me-container">
-    <div class="about-me-item">
-      <p>Hello! My name is Jonathan; I'm from south Los Angeles. I first began my coding journey back in 2013 before entering my freshman year of High School, when I took a summer boot camp on tech startups. That year I learned how to create my own website using HTML, CSS, and JavaScript; however, my role that summer was as a UI/UX designer. It was not until the summer after my sophomore year of high school did I take up the Swift coding language. Throughout that summer, I created an iOS app with little functionality as it was my first time taking up an object-oriented language. Since those summers, I have not looked back. 
-      </p>
-    </div>
-    <div class="about-me-item">
-      <!-- <div class = "image-of-me" > -->
-        <img class = "image-of-me" src="./images/aboutMe.jpeg">
-      <!-- </div> -->
+<!-- Timeline -->
+<div class = "timeline-container">
+  <div class = "timeline-title-container">
+    <p id = "timeline-title">Timeline</p>
+    <hr>
+  </div>
+  <!-- timeline scrolling x -->
+  <div class = "timeline-scroll-box">
+    <div class="grid-container">
+        <div class="timeline-item-image">
+          <div>
+            <img class = "timeline-photos" src="./images/year2.png">
+          </div>        
+        </div>
+        <div class="timeline-item-image">
+            <div>
+            <img class = "timeline-photos" src="./images/year2.png">
+          </div>
+        </div>
+        <div class="timeline-item-image">
+          <div>
+            <img class = "timeline-photos" src="./images/year3.png">
+          </div>  
+        </div>  
+        <div class="timeline-item-image">
+          <div>
+            <img class = "timeline-photos" src="./images/year2.png">
+          </div>  
+        </div>
+        <div>
+          <hr>
+          <p class = "timeline-date"> August 2013</p>
+          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+        </div>
+        <div>
+          <hr>
+          <p class = "timeline-date"> August 2015</p>
+          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+        </div>
+        <div>
+          <hr>
+          <p class = "timeline-date"> August 2016</p>
+          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+        </div>
+        <div>
+          <hr>
+          <p class = "timeline-date"> August 2018</p>
+          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+        </div>
     </div>
   </div>
 </div>
+
+<!-- Foooter -->
+<footer class = "foot-box">
+  <p></p>
+</footer>
 
 <script src="./scripts/index.js"></script>
 </body>
