Edited footer with buttons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <title>Jonathan</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./styles/index.css">
@@ -108,7 +109,26 @@
 
 <!-- Foooter -->
 <footer class = "foot-box">
-  <p></p>
+  <div class="footer-container">
+      <!-- Lft side -->
+      <div class="empty">
+      </div>
+      <!-- center -->
+      <div class="center-footer">
+        <a href="https://github.com/JonathanDominguez" target="_blank">
+          <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-github"></i></button>
+        </a>
+        <a href="https://www.linkedin.com/in/jonathandom/" target="_blank">
+          <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-linkedin-square"></i></button>
+        </a>
+        <a href="https://www.instagram.com/___jyd___/?hl=en" target="_blank">
+          <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-instagram"></i></button>
+        </a>
+      </div>
+      <!-- Right side -->
+      <div class="item3">
+      </div>  
+  </div>  
 </footer>
 
 <script src="./scripts/index.js"></script>
