Portfoli projects base

--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li><a href="./index.html">About</a></li>
-          <li><a href="#">Project</a></li>
+          <li><a href="./project.html">Project</a></li>
           <li><a href="./resume.html">Resume</a></li>
         </ul>
       </nav>
@@ -36,16 +36,11 @@
   </div>
 
 <!-- Name in middle -->
-<div class = "box-in-middle">
-    <div class = "my-name-box">
-        <p id = "my-name">Jonathan Dominguez</p>
-    </div>
-    <div class="names-container">
-        <div>Web Developer</div>
-        <div>Software Enginer</div>
-        <div>Machine Learning</div>  
-    </div>
+<div class = "center-box-text">
+    <p id = "my-name">Jonathan Dominguez</p>
+    <p>Web developer · Junior software engineer · Machine Learning</p>
 </div>
+  
 
 <!-- Carrer -->
 <div class = "experiences-box">
@@ -235,92 +230,28 @@
                 <span class="fa fa-star white"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">?</div>
+            <div class="skills-item">Java</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star white"></span>
+                <span class="fa fa-star white"></span>
                 <span class="fa fa-star white"></span>
             </div>
-            <div class="skills-item">?</div>
+            <div class="skills-item">Mongo.db</div>
             <div class="skills-item-right">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star white"></span>
+                <span class="fa fa-star white"></span>
                 <span class="fa fa-star white"></span>
             </div>  
-            <div class="skills-item">?</div>
+            <div class="skills-item">Angular</div>
             <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
-            </div>
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
-            </div>  
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>  
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>  
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star white"></span>
-            </div>  
-            <div class="skills-item">?</div>
-            <div class="skills-item-right">
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
                 <span class="fa fa-star white"></span>
             </div>
         </div>
@@ -338,8 +269,27 @@
 
 <!-- Foooter -->
 <footer class = "foot-box">
-    <p></p>
-</footer>
+    <div class="footer-container">
+        <!-- Lft side -->
+        <div class="empty">
+        </div>
+        <!-- center -->
+        <div class="center-footer">
+          <a href="https://github.com/JonathanDominguez" target="_blank">
+            <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-github"></i></button>
+          </a>
+          <a href="https://www.linkedin.com/in/jonathandom/" target="_blank">
+            <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-linkedin-square"></i></button>
+          </a>
+          <a href="https://www.instagram.com/___jyd___/?hl=en" target="_blank">
+            <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-instagram"></i></button>
+          </a>
+        </div>
+        <!-- Right side -->
+        <div class="item3">
+        </div>  
+    </div>  
+  </footer>
   
 <script src="./scripts/resume.js"></script>
 </body>
