--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="./index.html">About</a></li>
-          <li><a href="#">Project</a></li>
+          <li><a href="./project.html">Project</a></li>
           <li><a href="./resume.html">Resume</a></li>
         </ul>
       </nav>
