--- a/project.html
+++ b/project.html
@@ -31,147 +31,75 @@
 <!-- Project list 3x3 -->
 <div class = "portfolio-container-box">
     <div class="portfolio-container">
+        <div class="support-grid"></div>
 
-
-        
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-                <div class = "line">
-                </div>
-            </div>
-            <div class = "lower-half">
-                <hr class = "hr-line">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-
-
-
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-            </div>
-            <div class = "line">
-                <hr class = "hr-line">
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-            </div>
-            <div class = "line">
-                <hr class = "hr-line">
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-            </div>
-            <div class = "line">
-                <hr class = "hr-line">
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-                <div class = "line">
-                    <hr class = "hr-line">
-                </div>
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-            </div>
-            <div class = "line">
-                <hr class = "hr-line">
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-            </div>
-            <div class = "line">
-                <hr class = "hr-line">
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
-        </div>
-        <div class="card-port">
-            <img class = "project-image" src = "images/lunarLander.png">
-            <div class = "top-half">
-                <p class = "project-name">Lunar Lander</p> 
-                <p class = "project-description"></p> 
-            </div>
-            <div class = "description-half">
-                <p class = "project-description">This project is a game from the 80's made in python</p> 
-            </div>
-            <div class = "line">
-                <hr class = "hr-line">
-            </div>
-            <div class = "lower-half">
-                <p class = "project-date">March 20, 2021</p> 
-                <p class = "project-language">Python</p> 
-            </div>
+        <div class="band">
+          <div class="item-1">
+                <a href="#" class="card">
+                  <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+                  <article>
+                    <h1>International Artist Feature: Malaysia</h1>
+                    <span>Mary Winkler</span>
+                  </article>
+                </a>
+          </div>
+          <div class="item-2">
+                <a href="#" class="card">
+                  <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+                  <article>
+                    <h1>How to Conduct Remote Usability Testing</h1>
+                    <span>Harry Brignull</span>
+                  </article>
+                </a>
+          </div>
+          <div class="item-3">
+            <a href="#" class="card">
+              <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+              <article>
+                <h1>Created by You, July Edition</h1>
+                <p>Welcome to our monthly feature of fantastic tutorial results created by you, the Envato Tuts+ community! </p>
+                <span>Melody Nieves</span>
+              </article>
+            </a>
+          </div>
+          <div class="item-4">
+                <a href="#" class="card">
+                  <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+                  <article>
+                    <h1>How to Code a Scrolling “Alien Lander” Website</h1>
+                    <p>We’ll be putting things together so that as you scroll down from the top of the page you’ll see an “Alien Lander” making its way to touch down.</p>
+                    <span>Kezz Bracey</span>
+                  </article>
+                </a>
+          </div>
+          <div class="item-5">
+                <a href="#" class="card">
+                  <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+                  <article>
+                    <h1>How to Create a “Stranger Things” Text Effect in Adobe Photoshop</h1>
+                    <span>Rose</span>
+                  </article>
+                </a>
+          </div>
+          <div class="item-6">
+            <a href="#" class="card">
+              <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+              <article>
+                <h1>5 Inspirational Business Portraits and How to Make Your Own</h1>
+                
+                <span>Marie Gardiner</span>
+              </article>
+            </a>
+          </div>
+          <div class="item-7">
+            <a href="#" class="card">
+              <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+              <article>
+                <h1>Notes From Behind the Firewall: The State of Web Design in China</h1>
+                <span>Kendra Schaefer</span>
+              </article>
+            </a>
+          </div>
         </div>
     </div>
 </div>
