--- a/index.html
+++ b/index.html
@@ -8,22 +8,31 @@
 <link rel="stylesheet" href="./styles/index.css">
 <body>
 
-  <!-- Navigation bar   -->
-<header class = "head">
-    <div class="container">
-      <nav>
-        <ul>
-          <li><a href="./index.html">About</a></li>
-          <li><a href="./project.html">Project</a></li>
-          <li><a href="./resume.html">Resume</a></li>
+<!-- Navigation bar   -->
+<header>
+  <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top">
+    <div class="container navbar-container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" onclick="dropDown()">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./project.html">Project</a></li>
+        <li><a href="./resume.html">Resume</a></li>
         </ul>
-      </nav>
+      </div>
     </div>
+  </nav>
 </header>
 
-  <!-- background image -->
+<!-- background image -->
 <div class="backgroundImage">
-
 </div>
 
 <!-- Center box with text of name -->
@@ -107,7 +116,7 @@
   </div>
 </div>
 
-<!-- Foooter -->
+<!-- Footer -->
 <footer class = "foot-box">
   <div class="footer-container">
       <!-- Lft side -->
@@ -126,7 +135,7 @@
         </a>
       </div>
       <!-- Right side -->
-      <div class="item3">
+      <div class="empty">
       </div>  
   </div>  
 </footer>
