--- a/index.html
+++ b/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Jonathan</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./styles/index.css">
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Jonathan</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./styles/index.css">
+</head>
 <body>
 
 <!-- Navigation bar   -->
-<header>
-  <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top">
-    <div class="container navbar-container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar" onclick="dropDown()">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-        <li><a href="./index.html">About</a></li>
-        <li><a href="./project.html">Project</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+<div class="topnav" id="myTopnav">
+  <a href="./index.html">ABOUT</a>
+  <a href="./project.html">PROJECTS</a>
+  <a href="./resume.html">RESUME</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
 
 <!-- background image -->
 <div class="backgroundImage">
+
 </div>
 
 <!-- Center box with text of name -->
@@ -143,3 +134,4 @@
 <script src="./scripts/index.js"></script>
 </body>
 </html>
+
