footer deleted for now

--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@
         </div>
         <div>
           <hr>
-          <p class = "timeline-date"> August 2013</p>
-          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+          <p class = "timeline-date">2013</p>
+          <p class="timeline-item">This was the year I was introduced to  </p> 
         </div>
         <div>
           <hr>
-          <p class = "timeline-date"> August 2015</p>
-          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+          <p class = "timeline-date">2015</p>
+          <p class="timeline-item">In the summer of 2015 I </p> 
         </div>
         <div>
           <hr>
-          <p class = "timeline-date"> August 2016</p>
-          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+          <p class = "timeline-date">2016</p>
+          <p class="timeline-item">This was the year I was an instructor to over 20 middle and high school students. I created and taught lessons on HTML, CSS, JavaScript, as well as Jquery and PhotoShop.</p> 
         </div>
         <div>
           <hr>
-          <p class = "timeline-date"> August 2018</p>
-          <p class="timeline-item" >This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
+          <p class = "timeline-date">2018</p>
+          <p class="timeline-item">This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
         </div>
     </div>
   </div>
@@ -109,11 +109,9 @@
 
 <!-- Footer -->
 <footer class = "foot-box">
-  <div class="footer-container">
-      <!-- Lft side -->
+  <!-- <div class="footer-container">
       <div class="empty">
       </div>
-      <!-- center -->
       <div class="center-footer">
         <a href="https://github.com/JonathanDominguez" target="_blank">
           <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-github"></i></button>
@@ -125,10 +123,9 @@
           <button class="logo-button" style="font-size:48px; color:black;background-color: white;"> <i class="fa fa-instagram"></i></button>
         </a>
       </div>
-      <!-- Right side -->
       <div class="empty">
       </div>  
-  </div>  
+  </div>   -->
 </footer>
 
 <script src="./scripts/index.js"></script>
