--- a/blog.html
+++ b/blog.html
@@ -29,44 +29,33 @@
 <div class="blog-container">
         <!-- Blog #1 -->
         <div class="card">
-            <p class = "title-name">TITLE HEADING</p>
-            <div class="img-blog" style="height:200px;">Image</div>
+            <p class = "title-name">Summer Project/ Summer Internship 2021</p>
+            <div class="img-blog" style="height:200px;"> 
+                <img class="img-blog" src="./images//SummerProject21.png">
+            </div>
             <p class = "blog-date">June 2, 2021</p>
             <p class = "blog-description">Some text..</p>
-            <div class="bottom-container">
+            <!-- <div class="bottom-container">
                 <div class="bottom-item">
                     <button class = "read-more">Read More</button>
                 </div>
                 <div class="bottom-item">
                     <div class = "tags-container">
-                        <p class = "tags">Python</p>
+                        <p class = "tags">React.Js</p>
+                        <p class = "tags">HTML5</p>
+                        <p class = "tags">CSS3</p>
                         <p class = "tags">JavaScript</p>
-                        <p  class = "tags">Node.js</p>
                     </div>
                 </div> 
-            </div>
+            </div> -->
         </div>
-        <!-- Blog # -->
-        <div class="card">
+        <!-- Blog Skeleton-->
+        <!-- <div class="card">
             <p class = "title-name">TITLE HEADING</p>
             <div class="img-blog" style="height:200px;">Image</div>
             <p class = "blog-date">June 2, 2021</p>
             <p class = "blog-description">Some text..</p>
-        </div>
-        <!-- Blog #3 -->
-        <div class="card">
-            <p class = "title-name">TITLE HEADING</p>
-            <div class="img-blog" style="height:200px;">Image</div>
-            <p class = "blog-date">June 2, 2021</p>
-            <p class = "blog-description">Some text..</p>
-        </div>
-        <!-- Blog #4 -->
-        <div class="card">
-            <p class = "title-name">TITLE HEADING</p>
-            <div class="img-blog" style="height:200px;">Image</div>
-            <p class = "blog-date">June 2, 2021</p>
-            <p class = "blog-description">Some text..</p>
-        </div>
+        </div> -->
 </div>
 
 <!-- Footer -->
