--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <div class="band">
                 <div class="item-1">
                         <a href="#" class="card">
-                        <div class="thumb" style="background-image: url(./images/lunarLander.png);"></div>
+                        <div class="thumb" style="background-image: url(./images/SummerProject21.png);"></div>
                         <article>
                             <h1>Lunar Land</h1>
                             <div>
