--- a/index.html
+++ b/index.html
@@ -7,137 +7,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/index.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
     <title>Jonathan</title>
 </head>
-	<body>
-        <!-- Nav bar -->
-        <div id="menu-bar">
-            <div id="menu" onclick="onClickMenu()">
-                <div id="bar1" class="bar"></div>
-                <div id="bar2" class="bar"></div>
-                <div id="bar3" class="bar"></div>
-            </div>
-            <ul class="nav" id="nav">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./projects.html">Projects</a></li>
-                <li><a href="./resume.html">Resume</a></li>
-            </ul>
-        </div>
-        <div class="menu-bg" id="menu-bg"></div>
-        <!-- Center info -->
-        <section class="content">
-            <h1 class="sub-title"> Hello, my name is <strong id = "name-strong">Jonathan Dominguez.</strong> <br /> I'm a full-stack web developer and junior software engineer.</h1>
-            <!-- <button type="button" class="btn btn-outline-light" onclick="moveDown()">Start my journey</button> -->
-        </section>
-        <!-- About me section -->
-        <div class = "about-me">
-            <div class = "about-me-section">
-                <!-- Title about -->
-                <div id = "about-me-title-box">
-                <p id = "about-me-title">About Me</p>
-                <hr id = "hr-about-me">
-                </div>
-                <!-- Text info about -->
-                <div class="about-me-container">
-                <div class="about-me-item">
-                    <p>Hello! My name is Jonathan; I'm from south Los Angeles. I first began my coding journey back in 2013 before entering my freshman year of High School, when I took a summer boot camp on tech startups. That year I learned how to create my own website using HTML, CSS, and JavaScript; however, my role that summer was as a UI/UX designer. It was not until the summer after my sophomore year of high school did I take up the Swift coding language. Throughout that summer, I created an iOS app with little functionality as it was my first time taking up an object-oriented language. Since those summers, I have not looked back. 
-                    </p>
-                </div>
-                <div class="about-me-item">
-                    <!-- <div class = "image-of-me" > -->
-                    <img class = "image-of-me" src="./images/aboutMe.jpeg">
-                    <!-- </div> -->
-                </div>
-                </div>
-            </div>
-        <!-- Timeline -->
-        <div class = "timeline-container">
-            <div class = "timeline-title-container">
-            <p id = "timeline-title">Timeline</p>
-            <hr>
-            </div>
-            <!-- timeline scrolling x -->
-            <div class = "timeline-scroll-box">
-            <div class="grid-container">
-                <div class="timeline-item-image">
-                    <div>
-                    <img class = "timeline-photos" src="./images/year2.png">
-                    </div>        
-                </div>
-                <div class="timeline-item-image">
-                    <div>
-                    <img class = "timeline-photos" src="./images/year2.png">
-                    </div>
-                </div>
-                <div class="timeline-item-image">
-                    <div>
-                    <img class = "timeline-photos" src="./images/year3.png">
-                    </div>  
-                </div>  
-                <div class="timeline-item-image">
-                    <div>
-                    <img class = "timeline-photos" src="./images/year2.png">
-                    </div>  
-                </div>
-                <div>
-                    <hr>
-                    <p class = "timeline-date">2013</p>
-                    <p class="timeline-item">This was the year I was introduced to  </p> 
-                </div>
-                <div>
-                    <hr>
-                    <p class = "timeline-date">2015</p>
-                    <p class="timeline-item">In the summer of 2015 I </p> 
-                </div>
-                <div>
-                    <hr>
-                    <p class = "timeline-date">2016</p>
-                    <p class="timeline-item">This was the year I was an instructor to over 20 middle and high school students. I created and taught lessons on HTML, CSS, JavaScript, as well as Jquery and PhotoShop.</p> 
-                </div>
-                <div>
-                    <hr>
-                    <p class = "timeline-date">2018</p>
-                    <p class="timeline-item">This was the year I began my jounryhis was the year I began my jounry his was the year I began my jounry his was the yhis was the year I began my jounry his was the year I began my jounry his was the year I began my jounry his was the year I began my jounry ear I began my jounry  of coding</p> 
-                </div>
-            </div>
+	<body> 
+        <!-- Navbar -->
+        <div class="top-nav">
+            <div class="top-nav-right">
+                <a class="menu-list" href="./index.html">Home</a>
+                <a class="menu-list" href="./blog.html">Blog</a>
+                <a class="menu-list" href="./projects.html">Projects</a>
+                <a class="menu-list" href="./resume.html">Resume</a>
             </div>
         </div>
-        <footer class="bg-dark text-center text-white">
-            <!-- Grid container -->
-            <div class="container p-4 pb-0">
-                <!-- Section: Social media -->
-                <section class="mb-4">
-                <!-- Instagram -->
-                <!-- <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/jonathandom/" role="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-                    </svg>
-                </a> -->
-                <!-- Linkedin -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/jonathandom/" role="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                    </svg>
-                </a>
-                <!-- Github -->
-                <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/JonathanDominguez" role="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                    </svg>
-                </a>
-                </section>
-                <!-- Section: Social media -->
-                
+        <!-- Text Area -->
+        <div class="main-Box">
+            <hr id="break-line-above">
+            <!-- Intro -->
+            <div class="intro-text-box">
+                <h1 class="sub-title"> Hello, my name is <strong id = "name-strong">Jonathan Dominguez.</strong> <br /> I'm a front-end web developer and junior software engineer.</h1>
             </div>
-            <!-- Grid container -->
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                <p>Jonathan Dominguez V.2.0</p>
+            <!-- About me -->
+            <div class="about-me-text">
+                <p> I'm from South Los Angeles. I first began my coding journey back in 2013 before entering my freshman year of High School, when I took a summer boot camp on tech startups. That year I learned how to create my own website using HTML, CSS, and JavaScript; however, my role that summer was as a UI/UX designer. It was not until the summer after my sophomore year of high school did I take up the Swift coding language. Throughout that summer, I created an iOS app with little functionality as it was my first time taking up an object-oriented language. Since those summers, I have not looked back I am now currently attending UC Santa Cruz studying Cognitive Science. 
             </div>
-            <!-- Copyright -->
-        </footer>
+        </div>
         <!-- Scripts -->
 		<script src="./scripts/index.js"></script>
+            <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
 </html>
